k8s/datadog-agent.yml
apiVersion: v1
kind: Namespace
metadata:
  name: datadog
