k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-app
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-app
  template:
    metadata:
      labels:
        app: bank-app
    spec:
      containers:
      - name: bank-app
        image: my-image
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "256Mi"
            cpu: "150m"
          limits:
            memory: "512Mi"
            cpu: "200m"
