k8s/activity-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-service
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activity-service
  template:
    metadata:
      labels:
        app: activity-service
    spec:
      containers:
      - name: activity-service
        image: YOUR_ECR_URL/activity-service:latest
        ports:
        - containerPort: 8001
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: activity-service
  namespace: __NAMESPACE__
spec:
  selector:
    app: activity-service
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP
