k8s/kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:8.1.1
        ports:
        - containerPort: 9092
        - containerPort: 9101
        - containerPort: 29092
        - containerPort: 29093
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: __NAMESPACE__
spec:
  publishNotReadyAddresses: true
  selector:
    app: kafka
  ports:
    - name: plaintext
      port: 29092
      targetPort: 29092
    - name: external
      port: 9092
      targetPort: 9092
    - name: jmx
      port: 9101
      targetPort: 9101
    - name: controller
      port: 29093
      targetPort: 29093
  type: ClusterIP
