k8s/service.yml
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: bank-app-service
#   namespace: default
# spec:
#   selector:
#     app: bank-app
#   type: ClusterIP      # gives you an external AWS ELB
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 8000


---
apiVersion: v1
kind: Service
metadata:
  name: bank-frontend
  namespace: banking
spec:
  type: ClusterIP
  selector:
    app: bank-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: banking
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: transaction-service
#   namespace: banking
# spec:
#   type: ClusterIP
#   selector:
#     app: transaction-service
#   ports:
#     - protocol: TCP
#       port: 8080
#       targetPort: 8080

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: activity-service
#   namespace: banking
# spec:
#   type: ClusterIP
#   selector:
#     app: activity-service
#   ports:
#     - protocol: TCP
#       port: 8001
#       targetPort: 8001

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: banking
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: banking
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: kafka-service
#   namespace: banking
# spec:
#   type: ClusterIP
#   selector:
#     app: kafka
#   ports:
#     - name: internal
#       protocol: TCP
#       port: 29092
#       targetPort: 29092
#     - name: external
#       protocol: TCP
#       port: 9092
#       targetPort: 9092
#     - name: jmx
#       protocol: TCP
#       port: 9101
#       targetPort: 9101
#     - name: controller
#       protocol: TCP
#       port: 29093
#       targetPort: 29093
