k8s/transaction-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
      - name: transaction-service
        image: YOUR_ECR_URL/transaction-service:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "150m"
          limits:
            memory: "512Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: __NAMESPACE__
spec:
  selector:
    app: transaction-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
